# ai-video-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ip.yml  docker-compose.selectel.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  errors.py
app/comfy/: __init__.py  client.py  endpoints.py  engine.py
app/config/: __init__.py  constants.py  settings.py
app/database/: __init__.py  base.py  engine.py  tables.py
app/logging/: __init__.py  setup.py
app/middleware/: __init__.py  access_log.py  context.py
app/models/: __init__.py  definitions.py  enums.py
app/queue/: __init__.py  broker.py  jobs.py
app/repositories/: __init__.py  base.py  billing.py  logs.py  partners.py  tasks.py  uploads.py
app/runpod/: __init__.py  health.py  serverless_client.py
app/schemas/: __init__.py  admin.py  billing.py  common.py  generation.py  modes.py  tasks.py  uploads.py
app/security/: __init__.py  age.py  files.py  keys.py  ratelimit.py  sanitize.py
app/serverless/: __init__.py  handler.py  main.py  storage.py
app/services/: __init__.py  billing_service.py  callback_service.py  generation_service.py  mode_service.py  params.py  task_service.py  upload_service.py  webhook_service.py
config/: models.json
deploy/: Caddyfile  entrypoint.sh  nginx.conf  supervisord.conf
docs/: ARCHITECTURE.md  DEPLOY_RUNPOD.md  INTEGRATION.md  TOPOLOGY.md
scripts/: manage.py  schema.sql
tests/: conftest.py  test_age_gate.py  test_api.py  test_engine.py  test_params.py  test_registry.py  test_runpod_backend.py  test_security.py  test_serverless.py
(+28 files in other folders)
