[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-api"
version = "1.0.0"
description = "Production-grade AI Video Generation API over ComfyUI on RunPod"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AISHKA" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "redis>=5.0",
    "rq>=1.16",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.3",
    "websockets>=12.0",
    "structlog>=24.1",
    "python-json-logger>=2.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29", "psycopg[binary]>=3.1"]
serverless = ["runpod>=1.6", "boto3>=1.34"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles",
]

[project.scripts]
aivideo-worker = "app.workers.worker:main"
aivideo-api = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = false
warn_unused_ignores = true
